--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
+        android:onClick="tree"
         android:text="가족 나무" />
 
     <Button
@@ -26,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
+        android:onClick="quest"
         android:text="우리가족 퀘스트" />
 
     <Button
@@ -34,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        android:onClick="album"
+        android:onClick="gallery"
         android:text="가족 앨범" />
 
     <Button
@@ -43,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
+        android:onClick="calendar"
         android:text="가족 일정" />
 
     <Button
@@ -51,6 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
+        android:onClick="date"
         android:text="가족 데이트 코스" />
 
     <Button
@@ -59,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        android:onClick="end"
+        android:onClick="exit"
         android:text="나가기" />
 
 
