--- a/app/src/main/res/layout/activity_family__quest.xml
+++ b/app/src/main/res/layout/activity_family__quest.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Family_Quest">
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="퀘스트 완료 기록"
+        android:layout_marginTop="50dp"/>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="300dp" />
+
+</LinearLayout>
