--- a/app/src/main/res/layout/activity_family__calendar.xml
+++ b/app/src/main/res/layout/activity_family__calendar.xml
@@ -25,6 +25,8 @@
         android:text="일정 예약하기" />
 
     <ListView
+        android:id="@+id/listview10"
         android:layout_width="match_parent"
-        android:layout_height="257dp" />
+        android:layout_height="257dp"
+        android:transcriptMode="alwaysScroll"/>
 </LinearLayout>
