--- a/app/src/main/res/layout/activity_family__gallery.xml
+++ b/app/src/main/res/layout/activity_family__gallery.xml
@@ -1,9 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Family_Gallery">
+    android:orientation="vertical"
+    >
 
-</android.support.constraint.ConstraintLayout>
+    <GridView
+        android:id="@+id/family_album"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnWidth="90dp"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        android:stretchMode="columnWidth"
+        android:gravity="center"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        >
+        <ImageView
+            android:id="@+id/gallery_blank"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:visibility="invisible"
+            />
+        <Button
+            android:id="@+id/gallery_plus"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:onClick="gallery_plus"
+            android:text="사진 추가"
+            />
+    </LinearLayout>
+
+
+</RelativeLayout>
