--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,19 +34,26 @@
         android:hint="비밀번호"
         android:inputType="textPersonName" />
 
-    <Button
-        android:id="@+id/login"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="Login"
-        android:text="로그인" />
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/login"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:onClick="Login"
+            android:text="로그인" />
 
-    <Button
-        android:id="@+id/signup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="signup"
-        android:text="회원가입" />
+        <Button
+            android:id="@+id/signup"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:onClick="signup"
+            android:text="회원가입" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
 
