--- a/app/src/main/res/layout/activity_family__calendar.xml
+++ b/app/src/main/res/layout/activity_family__calendar.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/back3">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,5 +28,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="reservation"
+        android:background="@drawable/button"
         android:text="일정 예약하기" />
 </LinearLayout>
