--- a/app/src/main/res/layout/activity_family__date.xml
+++ b/app/src/main/res/layout/activity_family__date.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+
     >
 
 
@@ -26,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:onClick="link1"
+        android:background="@drawable/button"
         android:text="링크" />
 
     <TextView
@@ -46,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:background="@drawable/button"
         android:onClick="link2"
         android:text="링크" />
 
