--- a/app/src/main/res/layout/activity_family__quest.xml
+++ b/app/src/main/res/layout/activity_family__quest.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/back3">
 
     <TextView
         android:id="@+id/textView6"
@@ -32,7 +33,7 @@
 
         <Button
             android:id="@+id/button7"
-
+            android:background="@drawable/button"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -50,7 +51,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-
+            android:background="@drawable/button"
             android:onClick="monthq"
             android:text="월간퀘스트" />
 
