--- a/app/src/main/res/layout/activity_family__tree.xml
+++ b/app/src/main/res/layout/activity_family__tree.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/back3">
 
 
     <LinearLayout
@@ -16,21 +17,33 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="500dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/a" />
 
         <ListView
             android:id="@+id/listView"
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_height="500dp"
             android:layout_weight="1" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:orientation="horizontal"></LinearLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:background="@drawable/button"
+            android:onClick="skin"
+            android:text="나무 구매하기"
+            />
+    </LinearLayout>
 
 </LinearLayout>
