--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/back3"
     >
 
 
@@ -22,11 +23,11 @@
 
         <TextView
             android:id="@+id/textView1"
-            android:layout_width="150dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="이름"
-            android:textAlignment="center"/>
+            android:textAlignment="center" />
 
         <EditText
             android:id="@+id/editText1"
@@ -46,11 +47,11 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="150dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="아이디"
-            android:textAlignment="center"/>
+            android:textAlignment="center" />
 
         <EditText
             android:id="@+id/editText2"
@@ -70,11 +71,11 @@
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="150dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="비밀번호"
-            android:textAlignment="center"/>
+            android:textAlignment="center" />
 
         <EditText
             android:id="@+id/editText4"
@@ -83,6 +84,8 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="비밀번호"
+            android:inputType="textPersonName"
+            android:textAlignment="center"
 
             />
     </LinearLayout>
@@ -95,11 +98,11 @@
 
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="150dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="가족코드"
-            android:textAlignment="center"/>
+            android:textAlignment="center" />
 
         <EditText
             android:id="@+id/editText3"
@@ -157,14 +160,16 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:gravity="bottom"
         android:orientation="horizontal">
 
 
         <Button
             android:id="@+id/button"
+            android:background="@drawable/button"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:onClick="sign"
